--- a/RentApp/RentApp.csproj
+++ b/RentApp/RentApp.csproj
@@ -264,6 +264,7 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ServicesController.cs" />
+    <Compile Include="Controllers\TypeOfVehiclesController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -362,6 +363,11 @@
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
+    <Content Include="Views\TypeOfVehicles\Create.cshtml" />
+    <Content Include="Views\TypeOfVehicles\Delete.cshtml" />
+    <Content Include="Views\TypeOfVehicles\Details.cshtml" />
+    <Content Include="Views\TypeOfVehicles\Edit.cshtml" />
+    <Content Include="Views\TypeOfVehicles\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
