--- a/Angular/client-app/package.json
+++ b/Angular/client-app/package.json
@@ -20,12 +20,16 @@
     "@angular/platform-browser": "^6.0.3",
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
-    "bootstrap": "^4.1.1",
+    "@ng-bootstrap/ng-bootstrap": "^2.1.0",
+    "angular-font-awesome": "^3.1.2",
+    "bootstrap": "^3.3.7",
     "core-js": "^2.5.4",
+    "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
     "npm": "^6.1.0",
     "popper.js": "^1.14.3",
     "rxjs": "^6.0.0",
+    "rxjs-compat": "^6.2.0",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
