--- a/RentApp/RentApp.csproj
+++ b/RentApp/RentApp.csproj
@@ -277,6 +277,7 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\AppUsersController.cs" />
     <Compile Include="Controllers\BranchesController.cs" />
+    <Compile Include="Controllers\FileUploadController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\RentsController.cs" />
     <Compile Include="Controllers\ServicesController.cs" />
@@ -310,6 +311,10 @@
     <Compile Include="Migrations\201806121610211_Service changed.cs" />
     <Compile Include="Migrations\201806121610211_Service changed.Designer.cs">
       <DependentUpon>201806121610211_Service changed.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201806130920458_Branch modified.cs" />
+    <Compile Include="Migrations\201806130920458_Branch modified.Designer.cs">
+      <DependentUpon>201806130920458_Branch modified.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountBindingModels.cs" />
@@ -438,6 +443,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201806121610211_Service changed.resx">
       <DependentUpon>201806121610211_Service changed.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201806130920458_Branch modified.resx">
+      <DependentUpon>201806130920458_Branch modified.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
