Picture upload and download done

--- a/RentApp/RentApp.csproj
+++ b/RentApp/RentApp.csproj
@@ -411,6 +411,8 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Content\ServiceLogos\" />
+    <Folder Include="ServiceImages\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
