--- a/RentApp/RentApp.csproj
+++ b/RentApp/RentApp.csproj
@@ -411,6 +411,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Content\BranchLogos\" />
     <Folder Include="Content\ServiceLogos\" />
     <Folder Include="ServiceImages\" />
   </ItemGroup>
