--- a/RentApp/RentApp.csproj
+++ b/RentApp/RentApp.csproj
@@ -413,6 +413,7 @@
     <Folder Include="App_Data\" />
     <Folder Include="Content\BranchLogos\" />
     <Folder Include="Content\ServiceLogos\" />
+    <Folder Include="Content\VehicleImages\" />
     <Folder Include="ServiceImages\" />
   </ItemGroup>
   <ItemGroup>
