--- a/RentApp/RentApp.csproj
+++ b/RentApp/RentApp.csproj
@@ -316,6 +316,14 @@
     <Compile Include="Migrations\201806130920458_Branch modified.Designer.cs">
       <DependentUpon>201806130920458_Branch modified.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201806180837135_Cascade delete enabled.cs" />
+    <Compile Include="Migrations\201806180837135_Cascade delete enabled.Designer.cs">
+      <DependentUpon>201806180837135_Cascade delete enabled.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201806181003467_fix.cs" />
+    <Compile Include="Migrations\201806181003467_fix.Designer.cs">
+      <DependentUpon>201806181003467_fix.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountBindingModels.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
@@ -449,6 +457,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201806130920458_Branch modified.resx">
       <DependentUpon>201806130920458_Branch modified.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201806180837135_Cascade delete enabled.resx">
+      <DependentUpon>201806180837135_Cascade delete enabled.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201806181003467_fix.resx">
+      <DependentUpon>201806181003467_fix.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
