Added Rent a vehicle service and components and models

--- a/RentApp/RentApp.csproj
+++ b/RentApp/RentApp.csproj
@@ -324,9 +324,9 @@
     <Compile Include="Migrations\201806181003467_fix.Designer.cs">
       <DependentUpon>201806181003467_fix.cs</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\201806191306254_Images is not working.cs" />
-    <Compile Include="Migrations\201806191306254_Images is not working.Designer.cs">
-      <DependentUpon>201806191306254_Images is not working.cs</DependentUpon>
+    <Compile Include="Migrations\201806201719170_new.cs" />
+    <Compile Include="Migrations\201806201719170_new.Designer.cs">
+      <DependentUpon>201806201719170_new.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountBindingModels.cs" />
@@ -469,8 +469,8 @@
     <EmbeddedResource Include="Migrations\201806181003467_fix.resx">
       <DependentUpon>201806181003467_fix.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201806191306254_Images is not working.resx">
-      <DependentUpon>201806191306254_Images is not working.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201806201719170_new.resx">
+      <DependentUpon>201806201719170_new.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
