--- a/RentApp/RentApp.csproj
+++ b/RentApp/RentApp.csproj
@@ -333,6 +333,10 @@
     <Compile Include="Migrations\201806210731211_new model migration.Designer.cs">
       <DependentUpon>201806210731211_new model migration.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201806211049480_Service model changed.cs" />
+    <Compile Include="Migrations\201806211049480_Service model changed.Designer.cs">
+      <DependentUpon>201806211049480_Service model changed.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountBindingModels.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
@@ -482,6 +486,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201806210731211_new model migration.resx">
       <DependentUpon>201806210731211_new model migration.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201806211049480_Service model changed.resx">
+      <DependentUpon>201806211049480_Service model changed.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
