--- a/RentApp/RentApp.csproj
+++ b/RentApp/RentApp.csproj
@@ -341,6 +341,10 @@
     <Compile Include="Migrations\201806211840212_Added Activated field in service.Designer.cs">
       <DependentUpon>201806211840212_Added Activated field in service.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201806212118009_Service Owner added.cs" />
+    <Compile Include="Migrations\201806212118009_Service Owner added.Designer.cs">
+      <DependentUpon>201806212118009_Service Owner added.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountBindingModels.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
@@ -496,6 +500,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201806211840212_Added Activated field in service.resx">
       <DependentUpon>201806211840212_Added Activated field in service.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201806212118009_Service Owner added.resx">
+      <DependentUpon>201806212118009_Service Owner added.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
