--- a/Angular/client-app/package.json
+++ b/Angular/client-app/package.json
@@ -28,10 +28,12 @@
     "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
     "ng2-file-upload": "^1.3.0",
+    "ngx-paypal": "^3.0.0",
     "npm": "^6.1.0",
+    "paypal-checkout": "^4.0.204",
     "popper.js": "^1.14.3",
     "rxjs": "^6.0.0",
-    "rxjs-compat": "^6.2.0",
+    "rxjs-compat": "^6.2.1",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
